--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Ćwiczenia Gdów 2017-18 4T</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+        <link href="main.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 <h1>
