--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<li><a href="cw1/cw1.php">Ćwiczenie 1 wstęp</a></li>
 		<li><a href="cw2/cw2.php">Ćwiczenie 2 typy liczbowe</a></li>
                 <li><a href="cw3/cw3.php">Ćwiczenie 3 pętle w php</a></li>
+                 <li><a href="cw4/cw4.php">Ćwiczenie 4 formularz w php</a></li>
 	</ul>
 </div>
 </body>
