--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<title>Ćwiczenia Gdów 2017-18 4T</title>
+    <head>
+        <meta charset="utf-8">
+        <title>Ćwiczenia Gdów 2017-18 4T</title>
         <link href="main.css" rel="stylesheet" type="text/css"/>
-</head>
-<body>
-<h1>
-	Ćwiczenia Gdów 2017-18 4T
-</h1>
-<div id="menu">
-	<ul>
-		<li><a href="cw1/cw1.php">Ćwiczenie 1 wstęp</a></li>
-		<li><a href="cw2/cw2.php">Ćwiczenie 2 typy liczbowe</a></li>
+    </head>
+    <body>
+        <h1>
+            Ćwiczenia Gdów 2017-18 4T
+        </h1>
+        <div id="menu">
+            <ul>
+                <li><a href="cw1/cw1.php">Ćwiczenie 1 wstęp</a></li>
+                <li><a href="cw2/cw2.php">Ćwiczenie 2 typy liczbowe</a></li>
                 <li><a href="cw3/cw3.php">Ćwiczenie 3 pętle w php</a></li>
-                 <li><a href="cw4/cw4.php">Ćwiczenie 4 formularz w php</a></li>
-	</ul>
-</div>
-</body>
+                <li><a href="cw4/cw4.php">Ćwiczenie 4 formularz w php</a></li>
+                <li><a href="cw5/cw5.html">Ćwiczenie 5 formularz w php c.d</a></li>
+            </ul>
+        </div>
+    </body>
 </html>
