--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <li><a href="cw4/cw4.php">Ćwiczenie 4 formularz w php</a></li>
                 <li><a href="cw5/cw5.html">Ćwiczenie 5 formularz w php c.d</a></li>
                 <li><a href="cw99/cw99.php">Ćwiczenie 99 Tabliczka mnożeniad</a></li>
+                 <li><a href="cw98/cw98.php">Ćwiczenie 98 Tablice w php wstęp</a></li>
             </ul>
         </div>
     </body>
