--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
                 <li><a href="cw98/cw98.php">Ćwiczenie 98 Tablice w php</a></li>
                  <li><a href="cw97/cw97.php">Ćwiczenie 97 Funkcje w php</a></li>
                  <li><a href="cw98/cw98.php">Ćwiczenie 98 Tablice w php wstęp</a></li>
+                 <li><a href="cw7/cw7.php">Ćwiczenie 7 Tablice asocjacyjne w php wstęp</a></li>
+                  <li><a href="cw8/cw8.php">Ćwiczenie 8 Sortowanie tablic</a></li>
+                  <li><a href="cw9/cw9.php">Ćwiczenie 9 Operacje na tablicach</a></li>
             </ul>
         </div>
     </body>
