--- a/index.html
+++ b/index.html
@@ -19,14 +19,15 @@
                 <li><a href="cw99/cw99.php">Ćwiczenie 99 Tabliczka mnożeniad</a></li>
                 <li><a href="cw6/cw6.html">Ćwiczenie 6 walidacja liczb w php c.d</a></li>
                 <li><a href="cw98/cw98.php">Ćwiczenie 98 Tablice w php</a></li>
-                 <li><a href="cw97/cw97.php">Ćwiczenie 97 Funkcje w php</a></li>
-                 <li><a href="cw98/cw98.php">Ćwiczenie 98 Tablice w php wstęp</a></li>
-                 <li><a href="cw7/cw7.php">Ćwiczenie 7 Tablice asocjacyjne w php wstęp</a></li>
-                  <li><a href="cw8/cw8.php">Ćwiczenie 8 Sortowanie tablic</a></li>
-                  <li><a href="cw9/cw9.php">Ćwiczenie 9 Operacje na tablicach</a></li>
-                  <li><a href="cw96/cw96.php">Ćwiczenie 96 Operacje na plikach</a></li>
-                  <li><a href="cw95/cw95.php">Ćwiczenie 95 Firma ćwiczenia</a></li>
-                   <li><a href="cw94/cw94.php">Ćwiczenie 94 Programowanie obiektowe wstęp</a></li>
+                <li><a href="cw97/cw97.php">Ćwiczenie 97 Funkcje w php</a></li>
+                <li><a href="cw98/cw98.php">Ćwiczenie 98 Tablice w php wstęp</a></li>
+                <li><a href="cw7/cw7.php">Ćwiczenie 7 Tablice asocjacyjne w php wstęp</a></li>
+                <li><a href="cw8/cw8.php">Ćwiczenie 8 Sortowanie tablic</a></li>
+                <li><a href="cw9/cw9.php">Ćwiczenie 9 Operacje na tablicach</a></li>
+                <li><a href="cw96/cw96.php">Ćwiczenie 96 Operacje na plikach</a></li>
+                <li><a href="cw95/cw95.php">Ćwiczenie 95 Firma ćwiczenia</a></li>
+                <li><a href="cw94/cw94.php">Ćwiczenie 94 Programowanie obiektowe wstęp</a></li>
+                <li><a href="cw10/cw10.php">Ćwiczenie 10 Programowanie obiektowe dziedziczenie</a></li>
             </ul>
         </div>
     </body>
