--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <li><a href="cw95/cw95.php">Ćwiczenie 95 Firma ćwiczenia</a></li>
                 <li><a href="cw94/cw94.php">Ćwiczenie 94 Programowanie obiektowe wstęp</a></li>
                 <li><a href="cw10/cw10.php">Ćwiczenie 10 Programowanie obiektowe dziedziczenie</a></li>
+                <li><a href="cw11/cw11.php">Ćwiczenie 11 Bazy danych wstęp</a></li>
             </ul>
         </div>
     </body>
